# pokembeddings

./: .gitignore  1_cleanse_data.ipynb  2_train_word2vec.ipynb  3_train_word2vec_simple.ipynb  README.md  model.py  model_utils.py  pyproject.toml  test_type_similarity.py  utils.py
data/: easy_sentences.json  eval_data_poke_and_types.json  evolutions_and_types.json  train_data_pokedex_entries.json
evaluation_tests/: conftest.py  poke_types.py  test_suite.py  test_types.py
modules/: model.py  model_torch.py  test_type_similarity.py  test_types.py  utils.py
notebooks/: cleanse_pokedex.ipynb  load_model.ipynb  train_evaluate_model.ipynb  utils.py
notebooks/saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebooks/saved_model/variables/: variables.data-00000-of-00001  variables.index
tests/: poke_types.py  test_suite.py
train_data/: evolutions_and_types.json  pokedex_cleansed.csv  pokedex_entries.json
