[project]
name = "pokembeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "tensorflow-macos>=2.14.0",
    "tensorflow>=2.14.0",
    "tensorflow-metal>=1.2.0",
    "numpy<2.0",
]
