[project]
name = "pokembeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "tensorflow-macos>=2.14.0",
    "tensorflow>=2.14.0",
    "tensorflow-metal>=1.2.0",
    "numpy<2.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "plotly>=6.0.0",
    "nbformat>=5.10.4",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[tool.ruff]
include = ["pyproject.toml", "**/*.py"]
line-length = 100

[tool.ruff.lint]
select = ["D", "N", "I", "E501", "E", "F"]
ignore = ["ANN", "D410", "D413", "D100", "D211", "D213", "D203"]
exclude = [
    "**/__init__.py",
    "notebooks/",  # Ignore build artifacts
    "docs/",   # Ignore documentation files
]
